welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: '(' expected but identifier found.
  } else if Math.max(a,b)>20 {
            ^max1020:11: error: illegal start of simple expression
} 
^